# ngl

./: ngl.tar
.github/workflows/: cmake-multi-platform.yml
3part/: CMakeLists.txt  curl.7z  hiredis.7z  mysql.7z
3part/boost/: bcp导出.txt
tools/: README.md  rename_node.bat
tools/public/: build_idl.bat  build_protocol.bat  copy_config.bat  rebuild.bat
tools/public/copyfile/config/: config.xml  gm_protocol.xml  net_protocol.xml
tools/public/copyfile/csv/: tab_dbload.csv  tab_servers.csv
tools/public/idl/: build_idl.bat  csvtable.idl
tools/public/idl/idlfile/: csvtable.h
tools/public/pro/phpcode/db/GPBMetadata/: Db.php
tools/public/proto/: build_protocol.bat  create_db.sql  db.proto  gm.proto  net.proto
tools/public/proto/config/: gm_protocol.xml  gmserver_protocol.xml  net_protocol.xml  netserver_protocol.xml
tools/start_server/: 1.txt  start_client_1.bat  start_client_2.bat  start_server_1.bat  start_server_2.bat  start_server_cross.bat  start_server_initdb.bat
